# MOT

./: .gitignore  API.md  README.md  main.py  modifier_main.py  multi_test.py  pyproject.toml  requirements.txt  test.py  文件格式.md
manage_tools/: modifier_main_window.py
manage_tools/widgets/: data_edit_widget.py  data_modifier_widget.py  modifier_widget_parent.py  progress_bar.py  ws_edit_widget.py  ws_modifier_widget.py
operators/: convertor.py  data_reader.py  motlogging.py  reid_operator.py  video_operator.py  ws_reader.py
ui/: MainWindow.ui
windows/: avatar_label.py  compare_widget.py  illustration_label.py  main_video_widget.py  main_widget.py  main_window.py  map_label.py  multi_target_widget.py  paint_board.py  preview_item.py  preview_list_widget.py  track_slider_layout.py  track_widget.py  video_view.py
windows/images/: illustration.psd
windows/qss/: MainStyle.qss  ModifierStyle.qss
