[tool.poetry]
name = "mot"
version = "0.1.0"
description = ""
authors = ["SDchao <wentaochens@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyside2 = {version = "^5.15.1", python = ">=3.7,<3.10"}
numpy = "^1.19.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
